intent-classifier-model-deploy-kubernetes/kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intent-classifier
  namespace: mlops-projects
  labels:
    app: intent-classifier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: intent-classifier
  template:
    metadata:
      labels:
        app: intent-classifier
    spec:
      containers:
        - name: intent-classifier
          image: avian19/mlops-intent-project:v2-frontend
          ports:
            - containerPort: 5000
