intent-classifier-model-deploy-kubernetes/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intent-classifier
  namespace: mlops-projects
spec:
  selector:
    app: intent-classifier
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
