intent-classifier-model-deploy-kubernetes/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intent-classifier-ingress
  namespace: mlops-projects
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host:
      http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: intent-classifier
                port:
                  number: 80
